<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="horizontal"
    android:weightSum="2"
    tools:context=".presentation.menu.MenuDetailFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/dimen_20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/menuContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="@dimen/dimen_16dp"
            app:cardCornerRadius="@dimen/dimen_16dp"
            app:layout_constraintDimensionRatio="1.4:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    style="@style/WarungPojokTextView.Title"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/bg_rectangle_gradient_white_transparent"
                    android:ellipsize="end"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/dimen_20dp"
                    android:text="@string/sample_menu" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="44dp"
            android:lineSpacingExtra="@dimen/dimen_8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnMinus"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuContainer">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                style="@style/WarungPojokTextView.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:maxLines="10"
                tools:text="@tools:sample/lorem/random" />

        </androidx.core.widget.NestedScrollView>


        <ImageView
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="@dimen/dimen_8dp"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_minus_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuantity"
            style="@style/WarungPojokTextView.Header"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="@+id/btnMinus"
            app:layout_constraintStart_toEndOf="@+id/btnMinus"
            app:layout_constraintTop_toTopOf="@+id/btnMinus" />

        <ImageView
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dimen_8dp"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/tvQuantity"
            app:layout_constraintStart_toEndOf="@+id/tvQuantity"
            app:layout_constraintTop_toTopOf="@+id/tvQuantity"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_plus_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            style="@style/WarungPojokTextView.Caption"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sample_price"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:strokeWidth="1dp">


            <EditText
                android:id="@+id/edtKeteranganOrder"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@null"
                android:hint="Keterangan" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            style="@style/WarungPojokButton"
            android:layout_width="match_parent"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/action_ok"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</LinearLayout>
